# bevy_godot4

./: Cargo.toml
examples/: Cargo.toml
examples/simple/: Cargo.toml  build-wasm.sh  build.rs
examples/simple/.cargo/: config.toml
examples/simple/godot/: project.godot  simple.gdextension  simple.gdextension.uid
examples/simple/proto/: helloworld.proto
examples/simple/src/: client_grpc.rs  lib.rs
examples/simple/src/scripts/: mod.rs  world.rs
examples/simple/src/scripts/world/: solar_setup.rs
src/: scene.rs
