[package]
name = "simple"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
path = "../run_godot.rs"
name = "simple"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
bevy_godot4 = { path = "../../" }
godot = { version = "0.2.4", default-features = false, features = ["experimental-wasm"] }
tonic = { version="0.12.3", default-features = false, features=["prost","codegen"] }
tonic-web-wasm-client = "0.6.2"
prost = "0.13.5"
godot-rust-script = { git  = "https://github.com/TitanNano/godot-rust-script.git", branch = "master" }

[build-dependencies]
tonic-build = { version="0.12.3", default-features = false, features = ["prost"]}